Managing lifecycle of directives to avoid bugs like #98

--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -55,8 +55,14 @@
       <p class="paragraphViz">
         {{ 'REPORTING_VIEW_DUAL_LEGEND' | translate }}
       </p>
-      <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"></dual-timeline>
+      <dual-timeline
+        class="dataviz"
+        ng-data="timelineData"
+        start-date="selectedMinDate"
+        end-date="selectedMaxDate"
+      ></dual-timeline>
       <brushing-timeline
+        class="dataviz"
         ng-data="timelineData"
         start-date="selectedMinDate"
         end-date="selectedMaxDate"
@@ -90,21 +96,46 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4>{{'POLITICAL_STATUSES_TITLE' | translate}}&nbsp;<a href="https://medialab.github.io/GeoPolHist/{{entities.sourceEntity.selected.GPH_code ? '#/country/' + entities.sourceEntity.selected.GPH_code :''}}">GeoPolHist</a>&nbsp;{{entities.sourceEntity.selected.RICname}}</h4>
-      <p ng-if="entities.sourceEntity.selected.GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_INTRO' | translate}}</p>
-      <p ng-if="!entities.sourceEntity.selected.GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_MISSING' | translate}}</p>
+      <h4>
+        {{'POLITICAL_STATUSES_TITLE' | translate}}&nbsp;<a
+          href="https://medialab.github.io/GeoPolHist/{{entities.sourceEntity.selected.GPH_code ? '#/country/' + entities.sourceEntity.selected.GPH_code :''}}"
+          >GeoPolHist</a
+        >&nbsp;{{entities.sourceEntity.selected.RICname}}
+      </h4>
+      <p ng-if="entities.sourceEntity.selected.GPH_code" class="paragraphViz">
+        {{'POLITICAL_STATUSES_INTRO' | translate}}
+      </p>
+      <p ng-if="!entities.sourceEntity.selected.GPH_code" class="paragraphViz">
+        {{'POLITICAL_STATUSES_MISSING' | translate}}
+      </p>
       <div ng-if="entities.sourceEntity.selected.GPH_code">
         <political-statuses
+          class="dataviz"
           data="entityStatusesData"
           boundaries="{minYear: selectedMinDate, maxYear: selectedMaxDate}"
         />
-        <svg width="100%" height="20px"><g class="legend" >
-          <rect x="0" y="0" width="12" height="12" style="fill: url(&quot;#diagonalHatch&quot;);"></rect>
-          <text x="17" y="10" class="legend-item" fill="#333" translate="POLITICAL_STATUSES_SOVEREIGNTY_CAPTION"></text>
-          <rect x="180" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.2);"></rect>
-          <rect x="198" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.5);"></rect>
-          <rect x="216" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.8);"></rect>
-          <text x="239" y="10" class="legend-item" fill="#333" translate="POLITICAL_STATUSES_DEPENDENCIES_CAPTION"></text></g></svg>    
+        <svg width="100%" height="20px">
+          <g class="legend">
+            <rect x="0" y="0" width="12" height="12" style="fill: url('#diagonalHatch');"></rect>
+            <text
+              x="17"
+              y="10"
+              class="legend-item"
+              fill="#333"
+              translate="POLITICAL_STATUSES_SOVEREIGNTY_CAPTION"
+            ></text>
+            <rect x="180" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.2);"></rect>
+            <rect x="198" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.5);"></rect>
+            <rect x="216" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.8);"></rect>
+            <text
+              x="239"
+              y="10"
+              class="legend-item"
+              fill="#333"
+              translate="POLITICAL_STATUSES_DEPENDENCIES_CAPTION"
+            ></text>
+          </g>
+        </svg>
       </div>
     </div>
   </div>
@@ -116,6 +147,7 @@
       <h4>{{'REPORTING_PARTNER_CITATION_TITLE' | translate}} {{entities.sourceEntity.selected.RICname}}</h4>
       <div>
         <bar-chart
+          class="dataviz"
           ng-data="citationData"
           start-date="selectedMinDate"
           end-date="selectedMaxDate"
@@ -133,7 +165,8 @@
     <div class="col-sm-12 well">
       <h4 class="titleMultiLine">
         <div>
-          {{'PARTNER_HEATMAP_TITLE_1' | translate}} {{entities.sourceEntity.selected.RICname}}, {{'PARTNER_HEATMAP_TITLE_ORDER_BY' | translate}} 
+          {{'PARTNER_HEATMAP_TITLE_1' | translate}} {{entities.sourceEntity.selected.RICname}},
+          {{'PARTNER_HEATMAP_TITLE_ORDER_BY' | translate}}
           <div class="inline-select">
             <ui-select ng-model="$parent.heatmapOrder" theme="bootstrap">
               <ui-select-match
@@ -148,29 +181,30 @@
             </ui-select>
           </div>
         </div>
-        <div> {{'PARTNER_HEATMAP_TITLE_2' | translate}}           
-              <div class="inline-select">
-                <ui-select ng-model="$parent.heatmapField" theme="bootstrap">
-                  <ui-select-match
-                    class="ui-select-match"
-                    placeholder="{{ 'PARTNER_HEATMAP_FIELD_PLACEHOLDER' | translate }}"
-                  >
-                    {{$select.selected.label}}
-                  </ui-select-match>
-                  <ui-select-choices class="ui-select-choices" repeat="item in heatmapFieldList | filter: $select.search">
-                    <div ng-bind-html="item.label | highlight: $select.search"></div>
-                  </ui-select-choices>
-                </ui-select>
-              </div>
+        <div>
+          {{'PARTNER_HEATMAP_TITLE_2' | translate}}
+          <div class="inline-select">
+            <ui-select ng-model="$parent.heatmapField" theme="bootstrap">
+              <ui-select-match
+                class="ui-select-match"
+                placeholder="{{ 'PARTNER_HEATMAP_FIELD_PLACEHOLDER' | translate }}"
+              >
+                {{$select.selected.label}}
+              </ui-select-match>
+              <ui-select-choices class="ui-select-choices" repeat="item in heatmapFieldList | filter: $select.search">
+                <div ng-bind-html="item.label | highlight: $select.search"></div>
+              </ui-select-choices>
+            </ui-select>
+          </div>
         </div>
       </h4>
       <div class="partnersHistoLegend">
         <div class="legend-item">
           <svg height="15" width="500">
-            <rect x="0" y="0" width="10" height="10" style="fill: #f90202;opacity: 0.2" />
-            <rect x="12" y="0" width="10" height="10" style="fill: #f90202;opacity: 0.5" />
-            <rect x="24" y="0" width="10" height="10" style="fill: #f90202;opacity: 0.8" />
-            <text x="40" y="9" fill="black" >
+            <rect x="0" y="0" width="10" height="10" style="fill: #f90202; opacity: 0.2;" />
+            <rect x="12" y="0" width="10" height="10" style="fill: #f90202; opacity: 0.5;" />
+            <rect x="24" y="0" width="10" height="10" style="fill: #f90202; opacity: 0.8;" />
+            <text x="40" y="9" fill="black">
               {{ 'PARTNER_HEATMAP_COLOR' | translate }}
             </text>
           </svg>
@@ -207,7 +241,6 @@
   </div>
 </div>
 <!-- End: Reporter Heatmap-->
-
 
 <!-- Start: World Comparison -->
 <div class="container comparison">
