--- a/client/src/public/partials/bilateral.html
+++ b/client/src/public/partials/bilateral.html
@@ -93,7 +93,8 @@
         <inline-select-year ng-model="selectedMaxDate" list="rawYearsRange_forSup"></inline-select-year>
         {{ 'BILATERAL_2' | translate }} {{entities.sourceEntity.selected.RICname}}
       </h4>
-      <dual-timeline ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate"> </dual-timeline>
+      <dual-timeline class="dataviz" ng-data="timelineData" start-date="selectedMinDate" end-date="selectedMaxDate">
+      </dual-timeline>
       <div class="legend">
         <div class="legend-item">
           <div class="square import"></div>
@@ -124,6 +125,7 @@
         {{entities.targetEntity.selected.RICname}} {{ 'BILATERAL_BRUSH_2' | translate }}
       </h4>
       <brushing-timeline
+        class="dataviz"
         ng-data="timelineData"
         start-date="selectedMinDate"
         end-date="selectedMaxDate"
