--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -65,21 +65,42 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4>{{'POLITICAL_STATUSES_TITLE' | translate}}&nbsp;<a href="https://medialab.github.io/GeoPolHist/{{partnersDict[partner].GPH_code ? '#/country/' + partnersDict[partner].GPH_code :''}}">GeoPolHist</a>&nbsp;{{partnersDict[partner].label}}</h4>
+      <h4>
+        {{'POLITICAL_STATUSES_TITLE' | translate}}&nbsp;<a
+          href="https://medialab.github.io/GeoPolHist/{{partnersDict[partner].GPH_code ? '#/country/' + partnersDict[partner].GPH_code :''}}"
+          >GeoPolHist</a
+        >&nbsp;{{partnersDict[partner].label}}
+      </h4>
       <p ng-if="partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_INTRO' | translate}}</p>
       <p ng-if="!partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_MISSING' | translate}}</p>
       <div ng-if="partnersDict[partner].GPH_code">
         <political-statuses
+          class="dataviz"
           data="partnerGPHStatus"
           boundaries="{minYear: selectedMinDate, maxYear: selectedMaxDate}"
         />
-        <svg width="100%" height="20px"><g class="legend" >
-          <rect x="0" y="0" width="12" height="12" style="fill: url(&quot;#diagonalHatch&quot;);"></rect>
-          <text x="17" y="10" class="legend-item" fill="#333" translate="POLITICAL_STATUSES_SOVEREIGNTY_CAPTION"></text>
-          <rect x="180" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.2);"></rect>
-          <rect x="198" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.5);"></rect>
-          <rect x="216" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.8);"></rect>
-          <text x="239" y="10" class="legend-item" fill="#333" translate="POLITICAL_STATUSES_DEPENDENCIES_CAPTION"></text></g></svg>    
+        <svg width="100%" height="20px">
+          <g class="legend">
+            <rect x="0" y="0" width="12" height="12" style="fill: url('#diagonalHatch');"></rect>
+            <text
+              x="17"
+              y="10"
+              class="legend-item"
+              fill="#333"
+              translate="POLITICAL_STATUSES_SOVEREIGNTY_CAPTION"
+            ></text>
+            <rect x="180" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.2);"></rect>
+            <rect x="198" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.5);"></rect>
+            <rect x="216" y="0" width="12" height="12" style="fill: rgba(180, 0, 0, 0.8);"></rect>
+            <text
+              x="239"
+              y="10"
+              class="legend-item"
+              fill="#333"
+              translate="POLITICAL_STATUSES_DEPENDENCIES_CAPTION"
+            ></text>
+          </g>
+        </svg>
       </div>
     </div>
   </div>
@@ -92,6 +113,7 @@
       <h4>{{'PARTNER_REPORTER_CITATION_TITLE' | translate}} {{partnersDict[partner].label}}</h4>
       <div>
         <bar-chart
+          class="dataviz"
           ng-data="citationData"
           start-date="selectedMinDate"
           end-date="selectedMaxDate"
@@ -243,6 +265,7 @@
         <div class="row">
           <div class="col-sm-12">
             <linechart-world
+              class="dataviz"
               ng-data="comparisonData"
               currency="comparisonCurrency"
               start-date="selectedMinDate"
