Forgot to add dataviz class on line-chart on patner page for the calculus of the width

--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -374,6 +374,7 @@
         <div class="row">
           <div class="col-sm-12">
             <linechart-world
+              class="dataviz"
               ng-data="linechartData"
               currency="linechartCurrency"
               start-date="selectedMinDate"
