--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -1,16 +1,8 @@
 <div class="container container-page">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="title-border">{{ 'PARTNER_INTRO_TITLE' | translate }}</h1>
-      <p>{{ 'PARTNER_INTRO_PARA' | translate }}</p>
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row timeline-cont">
-    <div class="col-sm-12 well">
-      <h4 class="titleDualTL">
-        {{ 'PARTNER_TITLE_1' | translate }}
+      <h1 class="title-border flex-title">
+        {{ 'PARTNER_INTRO_TITLE' | translate }}
         <div class="inline-select">
           <ui-select ng-model="partner" theme="bootstrap" ng-change="selectPartner(partner)">
             <ui-select-match class="ui-select-match" placeholder="{{ 'SELECT_PARTNER' | translate }}">
@@ -58,7 +50,8 @@
             </ui-select-choices>
           </ui-select>
         </div>
-      </h4>
+      </h1>
+      <p>{{ 'PARTNER_INTRO_PARA' | translate }}</p>
     </div>
   </div>
 </div>
@@ -66,10 +59,13 @@
   <div class="row">
     <div class="col-sm-12 well">
       <h4>
-        {{'POLITICAL_STATUSES_TITLE' | translate}}&nbsp;<a
+        {{'POLITICAL_STATUSES_TITLE' | translate}}
+        <a
           href="https://medialab.github.io/GeoPolHist/{{partnersDict[partner].GPH_code ? '#/country/' + partnersDict[partner].GPH_code :''}}"
-          >GeoPolHist</a
-        >&nbsp;{{partnersDict[partner].label}}
+        >
+          GeoPolHist
+        </a>
+        {{partnersDict[partner].label}}
       </h4>
       <p ng-if="partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_INTRO' | translate}}</p>
       <p ng-if="!partnersDict[partner].GPH_code" class="paragraphViz">{{'POLITICAL_STATUSES_MISSING' | translate}}</p>
@@ -130,7 +126,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4 class="titleMultiLine">
+      <h4 class="titleMultiLine flex-title">
         <div>
           {{'PARTNER_REPORTER_HEATMAP_TITLE_1' | translate}} {{partnersDict[partner].label}}
           {{'PARTNER_REPORTER_HEATMAP_TITLE_2' | translate}} {{'PARTNER_REPORTER_HEATMAP_TITLE_ORDER' | translate}}
@@ -201,7 +197,7 @@
   <div class="row">
     <div class="col-sm-12 well">
       <!-- Title with form -->
-      <h4 class="titleMultiLine">
+      <h4 class="titleMultiLine flex-title">
         <div>
           {{ 'LINE_CHART_1' | translate }} {{partnersDict[partner].label}} {{ 'LINE_CHART_2' | translate }}
           <div class="inline-select">
