--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -33,7 +33,7 @@
 <div class="container container-page">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="title-border">
+      <h1 class="title-border flex-title">
         {{ 'REPORTING_INTRO_TITLE' | translate }}
         <inline-select-country
           ng-model="entities.sourceEntity.selected"
@@ -53,12 +53,14 @@
   <div class="row">
     <div class="col-sm-12 well">
       <h4>
-        {{'POLITICAL_STATUSES_TITLE' | translate}}<span class="hightlight-inline-variable"
-          >&nbsp;{{entities.sourceEntity.selected.RICname}}&nbsp;</span
-        >{{ 'POLITICAL_STATUSES_FROM' | translate }}&nbsp;<a
+        {{'POLITICAL_STATUSES_TITLE' | translate}}
+        <span class="hightlight-inline-variable">{{entities.sourceEntity.selected.RICname}}</span>
+        {{ 'POLITICAL_STATUSES_FROM' | translate }}
+        <a
           href="https://medialab.github.io/GeoPolHist/{{entities.sourceEntity.selected.GPH_code ? '#/country/' + entities.sourceEntity.selected.GPH_code :''}}"
-          >GeoPolHist</a
         >
+          GeoPolHist
+        </a>
       </h4>
       <p ng-if="entities.sourceEntity.selected.GPH_code" class="paragraphViz">
         {{'POLITICAL_STATUSES_INTRO' | translate}}
@@ -104,7 +106,7 @@
     <div class="col-sm-12 well">
       <h4 class="titleDualTL">
         {{ 'REPORTING_TITLE_1' | translate }}
-        <span class="hightlight-inline-variable">&nbsp;{{entities.sourceEntity.selected.RICname}}&nbsp;</span>
+        <span class="hightlight-inline-variable">{{entities.sourceEntity.selected.RICname}}</span>
       </h4>
       <p class="paragraphViz">
         {{ 'REPORTING_VIEW_DUAL_LEGEND' | translate }}
@@ -152,7 +154,7 @@
     <div class="col-sm-12 well">
       <h4>
         {{'REPORTING_PARTNER_CITATION_TITLE' | translate}}
-        <span class="hightlight-inline-variable">&nbsp;{{entities.sourceEntity.selected.RICname}}&nbsp;</span>
+        <span class="hightlight-inline-variable">{{entities.sourceEntity.selected.RICname}}</span>
       </h4>
       <div>
         <bar-chart
@@ -172,7 +174,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4 class="titleMultiLine">
+      <h4 class="titleMultiLine flex-title">
         <div>
           {{'PARTNER_HEATMAP_TITLE_1' | translate}}
           <span class="hightlight-inline-variable">&nbsp;{{entities.sourceEntity.selected.RICname}}&nbsp;</span>,
@@ -256,7 +258,7 @@
 <div class="container comparison">
   <div class="row">
     <div class="col-sm-12 well">
-      <h4 class="titleMultiLine">
+      <h4 class="titleMultiLine flex-title">
         <div>
           {{ 'LINE_CHART_1' | translate }}
           <span class="hightlight-inline-variable">&nbsp;{{entities.sourceEntity.selected.RICname}}&nbsp;</span> {{
