Forgot to add dataviz class on  geopolhist viz on partner page

--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -70,6 +70,7 @@
       </p>
       <div ng-if="entities.sourceEntity.selected.GPH_code">
         <political-statuses
+          class="dataviz"
           data="entityStatusesData"
           boundaries="{minYear: selectedMinDate, maxYear: selectedMaxDate}"
         />
