--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -115,6 +115,7 @@
           end-date="selectedMaxDate"
           raw-start-date="minDate"
           raw-end-date="maxDate"
+          tooltip-function="citationTooltipFunction"
         ></bar-chart>
       </div>
     </div>
