--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -165,6 +165,7 @@
           end-date="selectedMaxDate"
           raw-start-date="rawMinDate"
           raw-end-date="rawMaxDate"
+          tooltip-function="citationTooltipFunction"
         ></bar-chart>
       </div>
     </div>
