Adding tooltip on bar-chart for world page

--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -125,6 +125,7 @@
         end-date="selectedMaxDate"
         raw-start-date="rawMinDate"
         raw-end-date="rawMaxDate"
+        tooltip-function="nbReportingTooltip"
       ></bar-chart>
       <div class="legend">
         <div class="legend-item">
