--- a/Transnum_seminar_20200925/css/theme/medialab.css
+++ b/Transnum_seminar_20200925/css/theme/medialab.css
@@ -4,90 +4,123 @@
  */
 @import url("https://fonts.googleapis.com/css?family=Anonymous+Pro|Assistant:300,400|Open+Sans+Condensed:300");
 section.has-light-background {
-  text-align: left; }
-  section.has-light-background, section.has-light-background h1, section.has-light-background h2, section.has-light-background h3, section.has-light-background h4, section.has-light-background h5, section.has-light-background h6 {
-    color: #222; }
+  text-align: left;
+}
+section.has-light-background,
+section.has-light-background h1,
+section.has-light-background h2,
+section.has-light-background h3,
+section.has-light-background h4,
+section.has-light-background h5,
+section.has-light-background h6 {
+  color: #222;
+}
 
 code {
-  font-family: "Anonymous Pro", monospace !important; }
+  font-family: "Anonymous Pro", monospace !important;
+}
 
 code.lang-large {
-  font-size: 1.2em; }
+  font-size: 1.2em;
+}
 
 code.lang-very-large {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+}
 
-h2, h3 {
+h2,
+h3 {
   text-align: left;
-  margin-bottom: 40px !important; }
+  margin-bottom: 40px;
+}
 
-p, li {
+p,
+li {
   font-weight: 300 !important;
   text-align: left;
-  font-size: 0.8em !important; }
+  font-size: 0.8em !important;
+}
 
-ul, ol {
-  width: 100%; }
+ul,
+ol {
+  width: 100%;
+}
 
-ul, ol, li {
-  text-align: left !important; }
+ul,
+ol,
+li {
+  text-align: left !important;
+}
 
 li {
-  margin-bottom: 5px !important; }
+  margin-bottom: 5px !important;
+}
 
 small {
-  font-weight: 300 !important; }
+  font-weight: 300 !important;
+}
 
 a {
   font-family: "Assistant", Helvetica, sans-serif !important;
-  font-weight: 300 !important; }
+  font-weight: 300 !important;
+}
 
 img {
   border: none !important;
-  background: none !important; }
+  background: none !important;
+}
 
 img[src$=".svg"] {
-  background: none !important; }
+  background: none !important;
+}
 
 .red {
-  color: #fc5c52; }
+  color: #fc5c52;
+}
 
 .red-title {
   font-family: "Assistant", Helvetica, sans-serif !important;
-  color: #fc5c52; }
+  color: #fc5c52;
+}
 
 .red-number {
   color: #fc5c52;
   font-weight: 600 !important;
-  font-size: 1.2em !important; }
+  font-size: 1.2em !important;
+}
 
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
   background: #000;
-  background-color: #000; }
+  background-color: #000;
+}
 
 .reveal {
   font-family: "Assistant", Helvetica, sans-serif;
   font-size: 36px;
   font-weight: normal;
-  color: #fbf9f0; }
+  color: #fbf9f0;
+}
 
 ::selection {
   color: #fff;
   background: #fed2cf;
-  text-shadow: none; }
+  text-shadow: none;
+}
 
 ::-moz-selection {
   color: #fff;
   background: #fed2cf;
-  text-shadow: none; }
+  text-shadow: none;
+}
 
 .reveal .slides > section,
 .reveal .slides > section > section {
   line-height: 1.3;
-  font-weight: inherit; }
+  font-weight: inherit;
+}
 
 /*********************************************
  * HEADERS
@@ -106,75 +139,93 @@ body {
   letter-spacing: normal;
   text-transform: none;
   text-shadow: none;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 .reveal h1 {
-  font-size: 2.5em; }
+  font-size: 2.5em;
+}
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.6em;
+}
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 1.3em;
+}
 
 .reveal h4 {
-  font-size: 1em; }
+  font-size: 1em;
+}
 
 .reveal h1 {
-  text-shadow: none; }
+  text-shadow: none;
+}
 
 /*********************************************
  * OTHER
  *********************************************/
 .reveal p {
   margin: 20px 0;
-  line-height: 1.3; }
+  line-height: 1.3;
+}
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
 .reveal video,
 .reveal iframe {
   max-width: 95%;
-  max-height: 95%; }
+  max-height: 95%;
+}
 
 .reveal strong,
 .reveal b {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .reveal em {
-  font-style: italic; }
+  font-style: italic;
+}
 
 .reveal ol,
 .reveal dl,
 .reveal ul {
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em; }
+  margin: 0 0 0 1em;
+}
 
 .reveal ol {
-  list-style-type: decimal; }
+  list-style-type: decimal;
+}
 
 .reveal ul {
-  list-style-type: disc; }
+  list-style-type: disc;
+}
 
 .reveal ul ul {
-  list-style-type: square; }
+  list-style-type: square;
+}
 
 .reveal ul ul ul {
-  list-style-type: circle; }
+  list-style-type: circle;
+}
 
 .reveal ul ul,
 .reveal ul ol,
 .reveal ol ol,
 .reveal ol ul {
   display: block;
-  margin-left: 40px; }
+  margin-left: 40px;
+}
 
 .reveal dt {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .reveal dd {
-  margin-left: 40px; }
+  margin-left: 40px;
+}
 
 .reveal blockquote {
   display: block;
@@ -184,14 +235,17 @@ body {
   padding: 5px;
   font-style: italic;
   background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+}
 
 .reveal blockquote p:first-child,
 .reveal blockquote p:last-child {
-  display: inline-block; }
+  display: inline-block;
+}
 
 .reveal q {
-  font-style: italic; }
+  font-style: italic;
+}
 
 .reveal pre {
   display: block;
@@ -203,59 +257,72 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+}
 
 .reveal code {
   font-family: monospace;
-  text-transform: none; }
+  text-transform: none;
+}
 
 .reveal pre code {
   display: block;
   padding: 5px;
   overflow: auto;
   max-height: 400px;
-  word-wrap: normal; }
+  word-wrap: normal;
+}
 
 .reveal table {
   margin: auto;
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 .reveal table th {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .reveal table th,
 .reveal table td {
   text-align: left;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
+  border-bottom: 1px solid;
+}
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
-  text-align: center; }
+  text-align: center;
+}
 
 .reveal table th[align="right"],
 .reveal table td[align="right"] {
-  text-align: right; }
+  text-align: right;
+}
 
 .reveal table tbody tr:last-child th,
 .reveal table tbody tr:last-child td {
-  border-bottom: none; }
+  border-bottom: none;
+}
 
 .reveal sup {
-  vertical-align: super; }
+  vertical-align: super;
+}
 
 .reveal sub {
-  vertical-align: sub; }
+  vertical-align: sub;
+}
 
 .reveal small {
   display: inline-block;
   font-size: 0.6em;
   line-height: 1.2em;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 .reveal small * {
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 /*********************************************
  * LINKS
@@ -263,18 +330,21 @@ body {
 .reveal a {
   color: #fc5c52;
   text-decoration: none;
-  -webkit-transition: color .15s ease;
-  -moz-transition: color .15s ease;
-  transition: color .15s ease; }
+  -webkit-transition: color 0.15s ease;
+  -moz-transition: color 0.15s ease;
+  transition: color 0.15s ease;
+}
 
 .reveal a:hover {
   color: #fda39d;
   text-shadow: none;
-  border: none; }
+  border: none;
+}
 
 .reveal .roll span:after {
   color: #fff;
-  background: #fb1507; }
+  background: #fb1507;
+}
 
 /*********************************************
  * IMAGES
@@ -283,36 +353,43 @@ body {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #fbf9f0;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
 
 .reveal section img.plain {
   border: 0;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 .reveal a img {
-  -webkit-transition: all .15s linear;
-  -moz-transition: all .15s linear;
-  transition: all .15s linear; }
+  -webkit-transition: all 0.15s linear;
+  -moz-transition: all 0.15s linear;
+  transition: all 0.15s linear;
+}
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #fc5c52;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
+}
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #fc5c52; }
+  color: #fc5c52;
+}
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #fc5c52; }
+  color: #fc5c52;
+}
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
+  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+}
